# libcaptury

./: ChangeLog  Makefile.am  README  TODO  build.sh  configure.ac  libcaptury.pc.in
examples/: Makefile.am  capture-region.cpp  capture-screen.cpp
src/: Makefile.am
src/captury/: Makefile.am  TAudioCaptureSource.cpp  TAudioCaptureSource.h  TCapturyFrame.cpp  TCapturyFrame.h  TCapturyHandle.cpp  TCapturyHandle.h  TOpenGLCaptureSource.cpp  TOpenGLCaptureSource.h  TVideoCaptureSource.cpp  TVideoCaptureSource.h  captury.cpp  captury.h  codec.cpp  codec.h  fifo.h
