AC_INIT(AUTHORS)

LIBCAPTURY_MAJOR_VERSION=0
LIBCAPTURY_MINOR_VERSION=3
LIBCAPTURY_MICRO_VERSION=0
LIBCAPTURY_RELEASE_INFO="-dev"

LIBCAPTURY_VERSION=$LIBCAPTURY_MAJOR_VERSION.$LIBCAPTURY_MINOR_VERSION.$LIBCAPTURY_MICRO_VERSION$LIBCAPTURY_RELEASE_INFO
LIBCAPTURY_VERSION_INFO=`expr $LIBCAPTURY_MAJOR_VERSION + $LIBCAPTURY_MINOR_VERSION`:$LIBCAPTURY_MICRO_VERSION:$LIBCAPTURY_MINOR_VERSION
LIBCAPTURY_VERSION_NUMBER=`expr $LIBCAPTURY_MAJOR_VERSION \* 10000 + $LIBCAPTURY_MINOR_VERSION \* 100 + $LIBCAPTURY_MICRO_VERSION`

AC_SUBST(LIBCAPTURY_MAJOR_VERSION)
AC_SUBST(LIBCAPTURY_MINOR_VERSION)
AC_SUBST(LIBCAPTURY_MICRO_VERSION)
AC_SUBST(LIBCAPTURY_VERSION)
AC_SUBST(LIBCAPTURY_VERSION_INFO)
AC_SUBST(LIBCAPTURY_VERSION_NUMBER)

VERSION=${LIBCAPTURY_VERSION}

AM_INIT_AUTOMAKE(libcaptury, $VERSION)

AM_CONFIG_HEADER(config.h)

AC_GNU_SOURCE
AC_ISC_POSIX

AC_PROG_INSTALL
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG([0.17.2])

dnl {{{ --enable-examples
AC_ARG_ENABLE([examples], [
  --disable-examples       Disables compilation of example programs],
  [enable_examples=${withval}],
  [enable_examples=yes]
)
AM_CONDITIONAL([EXAMPLES], [test x$enable_examples = xyes])
dnl }}}

dnl -------------------------------------------------------------------------
PKG_CHECK_MODULES([CAPSEO], [capseo >= 0.0.0])
PKG_CHECK_MODULES([X11], [x11 >= 1.0.0])
PKG_CHECK_MODULES([XFIXES], [xfixes >= 1.0.0])

dnl -------------------------------------------------------------------------
AC_OUTPUT([
  Makefile
  libcaptury.pc
  src/Makefile
  src/captury/Makefile
  examples/Makefile
])

dnl vim:ai:et:ts=2:nowrap
